--- a/public/styles.css
+++ b/public/styles.css
@@ -162,3 +162,51 @@ form button {
   font-size: 25px;
   color: white;
 }
+
+/* Pour la table des users */
+
+.users-table {
+  width: 100%;
+  border-collapse: collapse;
+  margin-top: 20px;
+}
+
+.users-table th,
+.users-table td {
+  border: 1px solid #ddd;
+  padding: 12px;
+  text-align: left;
+}
+
+.users-table th {
+  background-color: #f2f2f2;
+  font-weight: bold;
+  text-transform: uppercase;
+}
+
+.users-table tr:nth-child(even) {
+  background-color: #f9f9f9;
+}
+
+.users-table tr:hover {
+  background-color: #f5f5f5;
+}
+
+/* details styles */
+.user {
+  position: relative;
+}
+.delete {
+  position: absolute;
+  top: 10px;
+  right: 0;
+  border-radius: 50%;
+  padding: 8px;
+}
+
+.delete:hover {
+  cursor: pointer;
+  background-color: crimson;
+  color: white;
+  box-shadow: 1px 2px 3px rgba(0, 0, 0, 0.2);
+}
