--- a/views/Partials/nav.ejs
+++ b/views/Partials/nav.ejs
@@ -9,6 +9,6 @@
     <ul>
         <li><a href="/">Users</a></li>
         <li><a href="/about">About</a></li>
-        <li><a href="/create">New User</a></li>
+        <li><a href="/users/create">New User</a></li>
     </ul>
 </nav>
