--- a/views/create.ejs
+++ b/views/create.ejs
@@ -15,8 +15,8 @@
                         <input type="text" name="name">
                         <label for="email">Email :</label>
                         <input type="email" name="email">
-                        <label for="brance">Branch :</label>
-                        <select name="branch">
+                        <label for="branche">Branch :</label>
+                        <select name="branche">
                             <option value="SCZ">SCZ</option>
                             <option value="IT">IT</option>
                             <option value="EFE">EFE</option>
