--- a/views/create.ejs
+++ b/views/create.ejs
@@ -8,7 +8,7 @@
         <%- include('./Partials/nav.ejs') %>
             <div class="create-blog content">
                 <div class="container">
-                    <form action="/post" method="post">
+                    <form action="/users" method="post">
                         <label for="reg_no">Registration Number :</label>
                         <input type="text" name="reg_no">
                         <label for="name">Name :</label>
